Added httpGetAll.